Bug 78875 - [ILK Bisected]Webglc conformance/uniforms/uniform-default-values.html fails
Summary: [ILK Bisected]Webglc conformance/uniforms/uniform-default-values.html fails
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium major
Assignee: Matt Turner
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-05-19 03:20 UTC by lu hua
Modified: 2015-01-13 05:31 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
patch (1.26 KB, patch)
2014-08-11 02:04 UTC, Matt Turner
Details | Splinter Review
patch v2 (1.36 KB, patch)
2014-08-11 05:39 UTC, Matt Turner
Details | Splinter Review

Description lu hua 2014-05-19 03:20:26 UTC
System Environment:
--------------------------
Platform: Ironlake
Libdrm:	(master)libdrm-2.4.54-8-g305478ce02ebd908a75c9830ecea15f6e2469b42
Mesa:	(master)5646319f25c7880b3706bb7590e24c84fd8de0fc
Xserver:(master)xorg-server-1.15.99.902-91-g01e18af17f8dc91451fbd0902049045afd1cea7e
Xf86_video_intel:(master)2.99.911-173-gdf297e9fafe1a7de1036f3151f93de67661c2a4e
Libva:	(staging)968ade9411de9c5ae2eead0a7e8755747a32a3a2
Libva_intel_driver:		(staging)1c4d3468229797e787f4b99b0729baf90a115a1d
Kernel:	(drm-intel-nightly)f79ba79cf037eea9ee757ad37730b00f43d5ef80

Bug detailed description:
-----------------------------
It fails on Ironlake with Mesa master, works well on 10.2 branch.

Bisect shows: afe3d1556f6b77031f7025309511a0eea2a3e8df is the first bad commit
commit afe3d1556f6b77031f7025309511a0eea2a3e8df
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Tue May 6 15:19:55 2014 -0700
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Mon May 12 09:50:32 2014 -0700

    i965: Stop doing remapping of "special" regs.

    Now that we aren't using pixel_[xy] in live variables, nothing is looking
    at these regs after the visitor stage.

    Reviewed-by: Matt Turner <mattst88@gmail.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>

Reproduce steps:
---------------------------- 
1. xinit
2. go to https://www.khronos.org/registry/webgl/conformance-suites/1.0.2/webgl-conformance-tests.html run conformance/uniforms/uniform-default-values.html
Comment 1 Kaveh 2014-08-01 06:26:53 UTC
Changing priority to medium due to the age of the platform.
Comment 2 Matt Turner 2014-08-11 01:52:38 UTC
The only "special" registers are used after the visitor are delta_x/delta_y which are used in register allocation. I'll handle this.
Comment 3 Matt Turner 2014-08-11 02:04:21 UTC
Created attachment 104397 [details] [review]
patch

Please test this patch. I think it will fix the problem.

Thanks for the report!
Comment 4 Matt Turner 2014-08-11 05:39:49 UTC
Created attachment 104406 [details] [review]
patch v2
Comment 5 lu hua 2014-08-13 06:07:24 UTC
(In reply to comment #4)
> Created attachment 104406 [details] [review] [review]
> patch v2

Test on latest Mesa master branch(include this patch), It still fails.
Comment 6 Matt Turner 2015-01-12 19:47:41 UTC
I think this might have been fixed by

commit 78bd12619474e98503965541c61c5d7e9c408110
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Fri Sep 12 17:45:30 2014 -0700

    i965: Mark delta_x/y as BAD_FILE if remapped away completely.

Please test.
Comment 7 lu hua 2015-01-13 05:31:02 UTC
Test on latest Mesa master branch and chrom 39. It works well.
Comment 8 lu hua 2015-01-13 05:31:14 UTC
Verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.